load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["defs.bzl"],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//ytt/private:ytt",
        "//ytt:repositories",
    ],
)
