module(
    name = "rules_ytt",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0", dev_dependency = True)

ytt_toolchains = use_extension("//ytt:extensions.bzl", "toolchains")
ytt_toolchains.ytt()
use_repo(ytt_toolchains, "ytt_toolchains")

register_toolchains("@ytt_toolchains//:all")
