load("@rules_ytt//:defs.bzl", "ytt")
load("@aspect_bazel_lib//lib:diff_test.bzl", "diff_test")

# genrule emulates an output for the following target:
#
# load("@rules_oci//oci:defs.bzl", "oci_image")
#
# oci_image(
#     name = "image",
#     ...
# )
genrule(
  name = "image.digest",
  outs = ["image.json.sha256"],
  cmd = "echo sha256:ae59f3b71bffe15917f1b4e94218d1d46f21938ff1d1b2a04dfdf77f3763224e > $@",
)

ytt(
    name = "manifest",
    srcs = glob(["*.yaml"]) + [":image.digest"],
)

diff_test(
    name = "manifest_test",
    file2 = "//examples/images/testdata:expected.yaml",
    file1 = "manifest",
    size = "small",
)
