load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "ytt",
    srcs = ["ytt.bzl"],
    visibility = [
        "//:__subpackages__",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//ytt:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//ytt:__subpackages__"],
)
